small css fixes, form contrast, spinner

--- a/src/sass/_chosen-overrides.scss
+++ b/src/sass/_chosen-overrides.scss
@@ -40,7 +40,7 @@
 
             span {
               color: $orange;
-              opacity: 0.5;
+              opacity: 1.0;
             }
         }
 
